// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ShortcutBadge — snapshots should match snapshot for active state 1`] = `
<button
  aria-label="Virtual Rack"
  class="flex items-center gap-1 px-1 py-0.5 rounded-xs border text-[6px] font-mono font-bold tracking-wider shrink-0 transition-all border-primary/30 bg-primary/10 text-primary hover:bg-primary/20"
  title="Virtual Rack"
>
  <kbd
    class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
  >
    Ctrl
  </kbd>
  <span
    class="text-white/20"
  >
    +
  </span>
  <kbd
    class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
  >
    2
  </kbd>
</button>
`;

exports[`ShortcutBadge — snapshots should match snapshot for default state 1`] = `
<button
  aria-label="Command Palette"
  class="flex items-center gap-1 px-1 py-0.5 rounded-xs border text-[6px] font-mono font-bold tracking-wider shrink-0 transition-all border-white/10 bg-white/5 text-white/30 hover:bg-white/10 hover:text-white/50"
  title="Command Palette"
>
  <kbd
    class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
  >
    Ctrl
  </kbd>
  <span
    class="text-white/20"
  >
    +
  </span>
  <kbd
    class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
  >
    K
  </kbd>
</button>
`;

exports[`ShortcutBadge — snapshots should match snapshot for disabled state 1`] = `
<button
  aria-label="Undo"
  class="flex items-center gap-1 px-1 py-0.5 rounded-xs border text-[6px] font-mono font-bold tracking-wider shrink-0 transition-all border-white/5 bg-transparent text-white/10 cursor-not-allowed"
  disabled=""
  title="Undo"
>
  <kbd
    class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
  >
    Ctrl
  </kbd>
  <span
    class="text-white/20"
  >
    +
  </span>
  <kbd
    class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
  >
    Z
  </kbd>
</button>
`;

exports[`ShortcutBadge — snapshots should match snapshot with responsive class 1`] = `
<button
  aria-label="Save"
  class="hidden md:flex items-center gap-1 px-1 py-0.5 rounded-xs border text-[6px] font-mono font-bold tracking-wider shrink-0 transition-all border-white/10 bg-white/5 text-white/30 hover:bg-white/10 hover:text-white/50"
  title="Save"
>
  <kbd
    class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
  >
    Ctrl
  </kbd>
  <span
    class="text-white/20"
  >
    +
  </span>
  <kbd
    class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
  >
    S
  </kbd>
</button>
`;

exports[`ShortcutBadge — snapshots should match snapshot with three keys 1`] = `
<button
  aria-label="Mini Map"
  class="flex items-center gap-1 px-1 py-0.5 rounded-xs border text-[6px] font-mono font-bold tracking-wider shrink-0 transition-all border-primary/30 bg-primary/10 text-primary hover:bg-primary/20"
  title="Mini Map"
>
  <kbd
    class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
  >
    Ctrl
  </kbd>
  <span
    class="text-white/20"
  >
    +
  </span>
  <kbd
    class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
  >
    Shift
  </kbd>
  <span
    class="text-white/20"
  >
    +
  </span>
  <kbd
    class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
  >
    M
  </kbd>
</button>
`;
